feat(api): criar device com a key da TV e buscar por key
